--- a/egui-tracing/Cargo.toml
+++ b/egui-tracing/Cargo.toml
@@ -21,6 +21,7 @@ egui.workspace = true
 globset = { version = "~0.4.15", features = ["serde1"] }
 serde = { version = "~1.0.210", default-features = false, features = ["derive"] }
 tracing = { version = "~0.1.40", default-features = false }
+tracing-core = { version = "~0.1.32", default-features = false }
 tracing-log = { version = "~0.2.0", optional = true, default-features = false }
 tracing-subscriber = { version = "~0.3.18", default-features = false, features = ["registry"] }
 unicode-segmentation = "~1.12"
