--- a/egui-tracing/Cargo.toml
+++ b/egui-tracing/Cargo.toml
@@ -18,6 +18,7 @@ reexport = []
 [dependencies]
 chrono = { version = "~0.4.38", default-features = false, features = ["clock"] }
 egui.workspace = true
+egui_extras = { version = "~0.29", default-features = false }
 globset = { version = "~0.4.15", features = ["serde1"] }
 serde = { version = "~1.0.210", default-features = false, features = ["derive"] }
 tracing = { version = "~0.1.40", default-features = false }
